--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.13
 Date: ??????
+  Balances:
+    - Added waste-water to urea recipe.
+    - Changed robot speeds.
+---------------------------------------------------------------------------------------------------
+Version: 1.0.12
+Date: ??????
   Bugfixes:
     - Fixes
