--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.14
+Date: ??????
+  Bugfixes:
+    - Small vaccum changes
+---------------------------------------------------------------------------------------------------
 Version: 1.0.13
 Date: ??????
   Balances:
