--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.15
+Date: ??????
+  Bugfixes:
+    - Alpha version to 0.17
+---------------------------------------------------------------------------------------------------
 Version: 1.0.14
 Date: ??????
   Bugfixes:
