--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.16
+Date: ??????
+  Balances:
+    - Fixed speeds of mines and zipir.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.15
 Date: ??????
   Bugfixes:
