--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.17
+Date: ??????
+  Balances:
+    - Fixed techtree
+---------------------------------------------------------------------------------------------------
 Version: 1.0.16
 Date: ??????
   Balances:
