--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.19
+Date: ??????
+  Balances:
+    - Lots of balances to make things easier.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.17
 Date: ??????
   Balances:
