--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: ??????
+  Balances:
+    - All recipes now accept modules.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.19
 Date: ??????
   Balances:
