removed support of modules in combustion

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: ??????
+  Balances:
+    - Removed support of modules in energy generation.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: ??????
   Balances:
