--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: ??????
+  Balances:
+    - Reworded pollution.
+    - Fixed robots.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: ??????
   Balances:
