speed up kikalk and some buildings
Former-commit-id: b8ddd8302ecb9ce18843c4e0332a4f1fb6ad270f
Former-commit-id: 0a130a74b2abe80ff28a05a222ea79597cbe0386

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: ??????
+  Balances:
+    - Speed up kikalks.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: ??????
   Balances:
