--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 1.1.3
 Date: ??????
   Balances:
     - Speed up kikalks.
+    - Balanced Polution.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: ??????
