--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: ??????
+  Balances:
+    - fixed recipes on claypit.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: ??????
   Balances:
