anti matter closed loop
Former-commit-id: 8ce6d5ec1487ecad82ef99cd6118f21b919aa6ce
Former-commit-id: e9ee1aaf1bb2a460b168ae569b2314840fde108a

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 1.1.4
 Date: ??????
   Balances:
     - fixed recipes on claypit.
+    - fixed recipes on antimatter fusion reaction.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: ??????
