--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.6
+Date: ??????
+  Balances:
+    - removed modules in laser-turret descontruction.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: ??????
   Balances:
