--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.7
+Date: ??????
+  Balances:
+    - Intelligent Unit now part of rocket parts.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: ??????
   Balances:
