--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.8
+Date: ??????
+  Bug fixes:
+    - Fixed acrolein bug.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.7
 Date: ??????
   Balances:
