--- a/changelog.txt
+++ b/changelog.txt
@@ -1,23 +1,23 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.8
-Date: ??????
+Date:
   Bug fixes:
     - Fixed acrolein bug.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.7
-Date: ??????
+Date:
   Balances:
     - Intelligent Unit now part of rocket parts.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
-Date: ??????
+Date:
   Balances:
     - removed modules in laser-turret descontruction.
     - moved DMS recipe to basic-electronics tech.
     - make cadaveric arum buildable in basic electronics.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
-Date: ??????
+Date:
   Balances:
     - fixed recipes on claypit.
     - fixed recipes on antimatter fusion reaction.
@@ -26,59 +26,59 @@ Date: ??????
     - tried to make it run after the update.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
-Date: ??????
+Date:
   Balances:
     - Speed up kikalks.
     - Balanced Polution.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
-Date: ??????
+Date:
   Balances:
     - Reworded pollution.
     - Fixed robots.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
-Date: ??????
+Date:
   Balances:
     - Removed support of modules in energy generation.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
-Date: ??????
+Date:
   Balances:
     - All recipes now accept modules.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.19
-Date: ??????
+Date:
   Balances:
     - Lots of balances to make things easier.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.17
-Date: ??????
+Date:
   Balances:
     - Fixed techtree
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.16
-Date: ??????
+Date:
   Balances:
     - Fixed speeds of mines and zipir.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.15
-Date: ??????
+Date:
   Bugfixes:
     - Alpha version to 0.17
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.14
-Date: ??????
+Date:
   Bugfixes:
     - Small vaccum changes
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.13
-Date: ??????
+Date:
   Balances:
     - Added waste-water to urea recipe.
     - Changed robot speeds.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.12
-Date: ??????
+Date:
   Bugfixes:
     - Fixes
