--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.9
+Date:
+  ADDED:
+    - Singularity generator.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.8
 Date:
   Bug fixes:
