--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.1.9
+Version: 1.2.1
+  Balance:
+    - reduced production of the singularity.
+---------------------------------------------------------------------------------------------------
+Version: 1.2.0
   Bug fix:
     - matter source.
 ---------------------------------------------------------------------------------------------------
