--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
   Balance:
+    - fixed bug when robots try to put the singularity.
+    - improved russian locale.
+---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+  Balance:
     - reduced production of the singularity.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
