--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.4
+  Bug-fixes:
+    - Fixed locale temp in benzene combustion.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.3
   Balance:
     - Reduced Myoglobin in Paramagnetic material.
