--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.5
+  Bug-fixes:
+    - Modules technology now unlocks in science 2.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.4
   Bug-fixes:
     - Fixed locale temp in benzene combustion.
