added new ore graphic
Former-commit-id: c15516ffaaff4c0e706c374397915089b2fba5ea
Former-commit-id: b4bebc8d8e57ca3be85bd48cab94b4d57a0c6e17

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.7
+  Changes:
+    - Added new graphics for rare earth ores.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.6
   Changes:
     - Fixed recipes unlocked before the building in the starting game.
