--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.8
+  Changes:
+    - Migration
+---------------------------------------------------------------------------------------------------
 Version: 1.2.7
   Changes:
     - Added new graphics for rare earth ores.
