--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+  Changes:
+    - Added german locale.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.9
   Changes:
     - Speed up a bit Zinc acetate and Biopolymer
