--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.0
+Version: 1.3.0  NAO RELEASED
   Changes:
-    - Added german locale.
+    - Added german locale. 
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.9
   Changes:
