--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.0  NAO RELEASED
+Version: 1.3.1
   Changes:
     - Added german locale. 
+    - Removed hability to add modules in buildings recipes.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.9
   Changes:
