--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.3
+  Changes:
+    - Adaptation for pyFE levels.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.2
   Changes:
     - Removed some byproducts of RE chain.
