--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.4
+  Changes:
+    - Fixes on tech tree.
+    - Added alternative laser module recipe.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.3
   Changes:
     - Adaptation for pyFE levels.
