--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.5
+  Changes:
+    - Removed modules in high-advanced parts.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.4
   Changes:
     - Fixes on tech tree.
