--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.5
+Version: 1.3.7
+  Changes:
+    - Added melamine to plastic.
+---------------------------------------------------------------------------------------------------
+Version: 1.3.6
   Changes:
     - Removed modules in high-advanced parts.
     - Removed 10 proton donors from diamond via particle acceleration.
