--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.8
+  Changes:
+    - Cosmetic.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.7
   Changes:
     - Added melamine to plastic.
