--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.9
+  Changes:
+    - Changes in mk03 modules recipes.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.8
   Changes:
     - Cosmetic.
