--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+  Changes:
+    - Fixed MK levels
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
   Changes:
     - Fixed MK levels
