--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.3
+  Changes:
+  - Fixed allowed module typres in buildings
+---------------------------------------------------------------------------------------------------
 Version: 1.4.2
   Changes:
     - Fixed MK levels
@@ -43,7 +47,7 @@ Version: 1.3.2
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
   Changes:
-    - Added german locale. 
+    - Added german locale.
     - Removed hability to add modules in buildings recipes.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.9
