--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.4
+  Changes:
+  - Fixed modules in py robots.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.3
   Changes:
   - Fixed allowed module typres in buildings
