--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.5
+  Changes:
+  - Migration to 0.18
+---------------------------------------------------------------------------------------------------
 Version: 1.4.4
   Changes:
   - Fixed modules in py robots.
