--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.6
+  Changes:
+  - Sounds fix
+---------------------------------------------------------------------------------------------------
 Version: 1.4.5
   Changes:
   - Migration to 0.18
