--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.7
+  Changes:
+  - Icon fix
+---------------------------------------------------------------------------------------------------
 Version: 1.4.6
   Changes:
   - Sounds fix
