--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.8
   Changes:
+  - Fixed error related to stdlib 1.4.1 update
+---------------------------------------------------------------------------------------------------
+Version: 1.4.8
+  Changes:
   - Recipe fix
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.7
