--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.4.8
+Version: 1.5.0
+  Changes:
+  - Fixed error related to stdlib 1.4.1 update
+---------------------------------------------------------------------------------------------------
+Version: 1.4.9
   Changes:
   - Fixed error related to stdlib 1.4.1 update
 ---------------------------------------------------------------------------------------------------
