--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
   Changes:
-  - Fixed error related to stdlib 1.4.1 update
+  - Increased plastic consuption
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.9
   Changes:
