--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.1
+  Changes:
+    - Tall oil balances
+---------------------------------------------------------------------------------------------------
 Version: 1.5.0
   Changes:
     - Increased plastic consuption
