--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.2
+Date: 2020-02-18
+  Changes:
+    - Utility now uses Servomechanims.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.1
   Changes:
     - Tall oil balances
