got robots to quite screaming
Former-commit-id: f289f4c938b60d3c7a6aa808e1809c85ad521d8f
Former-commit-id: d76a9e3835fcb8ade3600fc29a8883d35fe6e553

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.3
+Date: 2020-02-28
+  Changes:
+    - yelled at robots to use their inside voices
+---------------------------------------------------------------------------------------------------
 Version: 1.5.2
 Date: 2020-02-18
   Changes:
