--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.4
+Date: 2020-03-08
+  Changes:
+    - Added new pipes.
+---------------------------------------------------------------------------------------------------
 Version: 1.5.3
 Date: 2020-02-28
   Changes:
