--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.6
+Date: 2020-04-01
+  Changes:
+    - Added fuel values to some fluids
+---------------------------------------------------------------------------------------------------
 Version: 1.5.5
 Date: 2020-03-31
   Changes:
