--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.7
+Date: 2020-04-01
+  Changes:
+    - Fixed fiberglass
+---------------------------------------------------------------------------------------------------
 Version: 1.5.6
 Date: 2020-04-01
   Changes:
