--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.8
+Date: 2020-04-02
+  Changes:
+    - Fixed icons.
+
+---------------------------------------------------------------------------------------------------
 Version: 1.5.7
 Date: 2020-04-01
   Changes:
