fix pyht pipes needing a subgroup

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.9
+Date: 2020-05-10
+  Changes:
+    - Added subgroup for pyht pipes that was missing when pyindustries isnt loaded
+---------------------------------------------------------------------------------------------------
 Version: 1.5.8
 Date: 2020-04-02
   Changes:
     - Fixed icons.
-
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.7
 Date: 2020-04-01
