--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.1
+Date: 2020-06-14
+  Changes:
+    - Fixed myoglobin.
+---------------------------------------------------------------------------------------------------
 Version: 1.6.0
 Date: ????
   Changes:
