--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.2
+Date: 2020-07-26
+  Changes:
+    - Fixed bug with skin and recipe adjustments.
+---------------------------------------------------------------------------------------------------
 Version: 1.6.1
 Date: 2020-06-14
   Changes:
