--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.3
+Date: 2020-10-02
+  Changes:
+    - Changed icon.
+    - Added new rich-clay recipe
+---------------------------------------------------------------------------------------------------
 Version: 1.6.2
 Date: 2020-07-26
   Changes:
