--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.6.5
-Date: ????
+Version: 1.6.6
+Date: 2020-10-27
   Changes:
+    - Added hightech train.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.4
 Date: 2020-10-06
