py missed his period

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.7
+Date: 2020-10-28
+  Changes:
+    - Missed a period in image name
+---------------------------------------------------------------------------------------------------
 Version: 1.6.6
 Date: 2020-10-27
   Changes:
