--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.8
-Date: ????
+Date: 2020-11-07
   Changes:
+    - Added rechargeable nexelit batteries.
+    - Small balances to ht-trains.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.7
 Date: 2020-10-28
