--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.8
-Date: ????
+Date: 2020-11-08
   Changes:
     - Added rechargeable nexelit batteries.
     - Small balances to ht-trains.
