--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.9
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.6.8
 Date: 2020-11-08
   Changes:
