--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.6.9
 Date: ????
   Changes:
+    - Added equipment grid to ht-locomotive.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.8
 Date: 2020-11-08
