--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.9
-Date: ????
+Date: 2020-11-10
   Changes:
     - Added equipment grid to ht-locomotive.
 ---------------------------------------------------------------------------------------------------
