--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.10
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.6.9
 Date: 2020-11-10
   Changes:
