--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Version: 1.6.10
 Date: ????
   Changes:
     - Changed slots and stack size of batteries in Ht-locomotive to be more concise.
+    - Updated to factorio version 1.1.
+    - Added crashed ship assemblers allowing for minimal automation of some items at start.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.9
 Date: 2020-11-10
