--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.2
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.7.1
 Date: 2020-12-15
   Changes:
