--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.7.2
 Date: ????
   Changes:
+    - Migration.
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.1
 Date: 2020-12-15
