--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.2
-Date: ????
+Date: 2020-12-15
   Changes:
     - Migration.
 ---------------------------------------------------------------------------------------------------
