--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.7.3
 Date: ????
   Changes:
+    - Added gravel to saline.
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.2
 Date: 2020-12-15
