--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.3
-Date: ????
+Date: 2021-01-03
   Changes:
     - Added gravel to saline.
 ---------------------------------------------------------------------------------------------------
