--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.4
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.7.3
 Date: 2021-01-03
   Changes:
