--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.4
-Date: ????
+Date: 2021-01-04
   Changes:
     - Added equipment grid to hightech wagon.
 ---------------------------------------------------------------------------------------------------
