--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.5
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.7.4
 Date: 2021-01-04
   Changes:
