--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 Version: 1.7.5
 Date: ????
   Changes:
+      - Changed the position of some recipes to eliminate the fluids tab.
+      - Updated russian locale
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.4
 Date: 2021-01-04
