--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.5
-Date: ????
+Date: 2021-02-02
   Changes:
       - Changed the position of some recipes to eliminate the fluids tab.
       - Updated russian locale
