--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.7.6
 Date: ????
   Changes:
+      - Nexelit battery recharge now requieres small amounts of nexelit.
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.5
 Date: 2021-02-02
