--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.6
-Date: ????
+Date: 2021-02-06
   Changes:
       - Nexelit battery recharge now requieres small amounts of nexelit.
 ---------------------------------------------------------------------------------------------------
