--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.7
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.7.6
 Date: 2021-02-06
   Changes:
