--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,13 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.7.7
-Date: ????
+Version: 2.0.1
+Date: 2022-10-20
   Changes:
+    - adjustments to rock spawning
+---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 2022-10-14
+  Changes:
+    - bit of stuff
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.6
 Date: 2021-02-06
