--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.3
+Date: 2022-11-28
+  Changes:
+    - added night effects to electronics factory.
+    - tweaks for gunpowder.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2022-11-03
   Changes:
