--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.4
+Date: 2022-11-29
+  Changes:
+    - fix changelog not displaying ingame.
+---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2022-11-28
   Changes:
