--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.7
+Date: 2023-1-31
+  Changes:
+    - Fixed train batteries could be inserted into grids. 
+---------------------------------------------------------------------------------------------------
 Version: 2.0.6
 Date: 2023-1-5
   Changes:
