--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.9
+Date: ?
+  Changes:
+    - update chinese translation. credit sdqwo
+---------------------------------------------------------------------------------------------------
 Version: 2.0.8
 Date: 2023-3-28
   Changes:
