--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.9
-Date: ?
+Date: 2023-7-25
   Changes:
     - update chinese translation. credit sdqwo
+    - removed productivity from fluidized coke recipe
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.8
 Date: 2023-3-28
@@ -316,9 +317,6 @@ Version: 1.2.1
   Balance:
     - Fixed bug when robots try to put the singularity.
     - Improved russian locale.
----------------------------------------------------------------------------------------------------
-Version: 1.2.1
-  Balance:
     - Reduced production of the singularity.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
