add missing mk04 machines

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.10
+Date: ?
+  Changes:
+    - added particle accelerator mk04
+    - added molecular assembler mk04
+---------------------------------------------------------------------------------------------------
 Version: 2.0.9
 Date: 2023-7-25
   Changes:
