--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.10
-Date: ?
+Date: 2023-9-3
   Changes:
     - added particle accelerator mk04
     - added molecular assembler mk04
