--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.11
+Date: ???
+  Changes:
+    - added decentralised PyPP cache file
+---------------------------------------------------------------------------------------------------
 Version: 2.0.10
 Date: 2023-9-3
   Changes:
