--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.11
-Date: ???
+Date: 2023-11-21
   Changes:
     - added decentralised PyPP cache file
+    - Fixed issue with circuit processing mod
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.10
 Date: 2023-9-3
