--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.12
+Date: When it's done
+  Changes:
+    - Added circuit connectivity to Phosphate Mine and Rare-Earth Extractor (credit: JStMorgan)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.11
 Date: 2023-11-21
   Changes:
