--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.14
+Date: 2024-1-31
+  Changes:
+    - Fixed that colloidal silica was ilica
+---------------------------------------------------------------------------------------------------
 Version: 2.0.13
 Date: 2024-1-19
   Changes:
