--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.15
+Date: ?
+  Changes:
+    - Improved the description for phosphate deposits. (https://github.com/pyanodon/pybugreports/issues/411)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.14
 Date: 2024-1-31
   Changes:
