--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.16
+Date: 2024-3-14
+  Changes:
+    - Fixed typo in nexelit battery charge level. should be 100MJ not 1GJ
+---------------------------------------------------------------------------------------------------
 Version: 2.0.15
 Date: 2024-3-13
   Changes:
