--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.17
-Date: ?
+Date: 2024-3-24
   Changes:
     - Improved the description for phosphate deposits. (https://github.com/pyanodon/pybugreports/issues/411)
+    - Fixed some resources couldnt be disabled in map setup screen
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.16
 Date: 2024-3-14
