--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.18
+Date: 2024-4-13
+  Changes:
+    - New icon for DMS (https://github.com/pyanodon/pybugreports/issues/427)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.17
 Date: 2024-3-24
   Changes:
