--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Version: 2.0.18
 Date: 2024-4-13
   Changes:
-    - New icon for DMS (https://github.com/pyanodon/pybugreports/issues/427)
+    - Resprited & upscaled icons for DMS, phosphine gas, phosphoric acid, and phosphorus acid (https://github.com/pyanodon/pybugreports/issues/427) (https://github.com/pyanodon/pybugreports/issues/419)
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.17
 Date: 2024-3-24
