--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.18
-Date: 2024-4-13
+Date: ?
   Changes:
     - Resprited & upscaled icons for DMS, phosphine gas, phosphoric acid, and phosphorus acid (https://github.com/pyanodon/pybugreports/issues/427) (https://github.com/pyanodon/pybugreports/issues/419)
 ---------------------------------------------------------------------------------------------------
