--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.19
+Date: in 5 hours
+  Changes:
+    - fixed some recipes outputting more steam than input water when using productivity modules
+---------------------------------------------------------------------------------------------------
 Version: 2.0.18
 Date: 2024-6-19
   Changes:
