fix pipe volume

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.2
+Date: soontm
+  Changes:
+    - Changed multipurpose pipe volume back to 100.
+---------------------------------------------------------------------------------------------------
 Version: 3.0.1
 Date: 2024-10-21
   Changes:
