--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 3.0.2
 Date: soontm
   Changes:
     - Changed multipurpose pipe volume back to 100.
+    - Fixed nuclear research technology.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.1
 Date: 2024-10-21
