--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.3
+Date: 2024-10-29
+  Changes:
+    - To quality or to not quality is the question
+---------------------------------------------------------------------------------------------------
 Version: 3.0.2
 Date: 2024-10-29
   Changes:
