--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.4
+Date: ?
+  Changes:
+    - Fixed unfriendly usage of YAFC's script_enabled table. Resolves https://github.com/pyanodon/pybugreports/issues/672
+---------------------------------------------------------------------------------------------------
 Version: 3.0.3
 Date: 2024-10-29
   Changes:
