--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.5
+Date: ?
+  Changes:
+    - Fixed a deadlock in MediumPy where the inserter recipe was not enabled or researchable, yet required to make progress.
+---------------------------------------------------------------------------------------------------
 Version: 3.0.4
 Date: 2024-11-7
   Changes:
