--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.5
-Date: 2024-11-8
+Date: ?
   Changes:
     - Fixed a deadlock in MediumPy where the inserter recipe was not enabled or researchable, yet required to make progress.
 ---------------------------------------------------------------------------------------------------
