--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.6
+Date: \\\\\\\\\\\\\\
+  Changes:
+    - Fixed particle accelerators accepting efficiency modules.
+---------------------------------------------------------------------------------------------------
 Version: 3.0.5
 Date: 2024-11-8
   Changes:
