--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.6
-Date: \\\\\\\\\\\\\\
+Date: 2024-11-9
   Changes:
     - Fixed particle accelerators accepting efficiency modules.
 ---------------------------------------------------------------------------------------------------
