--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.8
+Date: ?
+  Locale:
+    - Swapped resistor1 and resistor3's description to be accurate to the name
+---------------------------------------------------------------------------------------------------
 Version: 3.0.7
 Date: 2024-11-14
   Changes:
