--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.8
-Date: ?
+Date: 2024-11-18
   Locale:
     - Swapped resistor1 and resistor3's description to be accurate to the name
 ---------------------------------------------------------------------------------------------------
