Zinc acetate and rayon now admit prod modules, just like in 1.1
Resolves https://github.com/pyanodon/pybugreports/issues/789

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.9
+Date: ?
+  Locale:
+    - Zinc acetate and rayon now admit prod modules, just like in 1.1
+---------------------------------------------------------------------------------------------------
 Version: 3.0.8
 Date: 2024-11-18
   Locale:
