--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.9
-Date: ?
+Date: 2025-1-2
   Locale:
     - Zinc acetate and rayon now admit prod modules, just like in 1.1
 ---------------------------------------------------------------------------------------------------
