Removed all legacy low-res graphic files from pyanodon.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.10
+Date: ?
+  Changes:
+    - Removed all legacy low-res graphic files from pyanodon.
+---------------------------------------------------------------------------------------------------
 Version: 3.0.9
 Date: 2025-1-2
-  Locale:
+  Changes:
     - Zinc acetate and rayon now admit prod modules, just like in 1.1
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.8
