--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.11
+Date: ?
+  Changes:
+    - Fixed wrong graphics for locomotive MK03 shadow. Resolves https://github.com/pyanodon/pybugreports/issues/827
+---------------------------------------------------------------------------------------------------
 Version: 3.0.10
 Date: 2024-1-20
   Changes:
