--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 3.0.11
 Date: ?
   Changes:
     - Fixed wrong graphics for locomotive MK03 shadow. Resolves https://github.com/pyanodon/pybugreports/issues/827
+    - Migrated the internal name of the "vacuum-tube-electronics" technology to "electronics". Resolves https://github.com/pyanodon/pybugreports/issues/453
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.10
 Date: 2025-1-20
