--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.12
-Date: ???
+Date: 2025-3-3
   Changes:
     - Fixed fluid mining drills not working when connected to pipelines with low fluid level
 ---------------------------------------------------------------------------------------------------
