--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.13
+Date: ?
+  Changes:
+    - Changed the internal name of the intelligent unit technology from "nano-tech" to "quantum-processor".
+---------------------------------------------------------------------------------------------------
 Version: 3.0.12
 Date: 2025-3-3
   Changes:
