--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.13
-Date: ?
+Date: 2025-6-1
   Changes:
     - Changed the internal name of the intelligent unit technology from "nano-tech" to "quantum-processor".
 ---------------------------------------------------------------------------------------------------
